corrigiendo vistas y validaciones en controlador sueldos

--- a/views/sueldos/horas.html
+++ b/views/sueldos/horas.html
@@ -8,6 +8,7 @@
                 {{=form.custom.widget.nro_legajo}}
             </div>
           </div>
+
            <div class="form-group row">
             <label for="campo_nrolegajo" class="col-sm-2 control-label">Mes</label>
             <div class="col-sm-2">
@@ -32,7 +33,13 @@
                 {{=form.custom.widget.horas_extras}}
             </div>
           </div>
-           {{=form.custom.submit}}
- </div>
-
+<br>
+<br>
+<center>
+<div class=" col-sm-offset-1  col-sm-5">
+      <button type="submit" class="btn btn-default">guardar</button>
+   </div>
+   </div> 
+</div>
+</center>
 {{=form.custom.end}}
