--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -10,11 +10,11 @@
 
           <div class="form-group row">
             <label for="campo_nrolegajo" class="col-sm-2 control-label">Nro Legajo</label>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 {{=form.custom.widget.nro_legajo}}
             </div>
             <label for="campo_fechaegr" class="col-sm-2 control-label">Fecha Egreso</label>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 {{=form.custom.widget.fecha_egreso}}
             </div>
           </div>
@@ -35,21 +35,21 @@
           </div>
 <div class="form-group row">
             <label for="campo_nombre" class="col-sm-2 control-label">Nombres</label>
-            <div class="col-sm-4">
+            <div class="col-sm-2">
                 {{=form.custom.widget.nombres}}
             </div>
             <label for="campo_nombre" class="col-sm-2 control-label">Apellidos</label>
-            <div class="col-sm-4">
+            <div class="col-sm-2">
                 {{=form.custom.widget.apellido}}
             </div>
           </div>
  <div class="form-group row">
             <label for="campo_fenac1" class="col-sm-2 control-label">Fecha Nacimiento</label>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 {{=form.custom.widget.fecha_nacimiento}}
             </div>
             <label for="campo_lugnac" class="col-sm-2 control-label">Lugar Nacimiento</label>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                 {{=form.custom.widget.lugar_nacimiento}}
             </div>
           </div>
@@ -83,7 +83,13 @@
             <div class="col-sm-1">
                 {{=form.custom.widget.depto}}
     </div>
-      
-      {{=form.custom.submit}}
 </div>
+<RIGHT>
+     <div class="col-sm-12">
+
+          <button  type="submit" class="btn btn-default">siguiente </button> 
+     </div>
+    
+</div>
+</RIGHT>
 {{=form.custom.end}}
