--- a/views/sueldos/vista_previa_horas.html
+++ b/views/sueldos/vista_previa_horas.html
@@ -7,24 +7,31 @@
                 {{=recordset.num_legajo}}
                
             </div>
+</div>
+<div class="form-group row">
             <label for="campo_fechaegr" class="col-sm-1 control-label">Mes Trabajado</label>
             <div class="col-sm-1">
                 {{=recordset.mes_trabajado}}
-                
             </div>
+</div>
+<div class="form-group row">
      <label for="campo_fechaegr" class="col-sm-1 control-label">Semana</label>
             <div class="col-sm-1">
                 {{=recordset.semana}}
-                
+
             </div>
+</div>
+
+<div class="form-group row">
      <label for="campo_fechaegr" class="col-sm-1 control-label">Horas Trabajadas</label>
             <div class="col-sm-1">
                 {{=recordset.hs_trab}}
-                
             </div>
+</div>
+
+<div class="form-group row">
      <label for="campo_fechaegr" class="col-sm-1 control-label">Horas Extras</label>
             <div class="col-sm-1">
                 {{=recordset.hs_ext}}
-                
             </div>
 </div>
