--- a/views/sueldos/familiar.html
+++ b/views/sueldos/familiar.html
@@ -53,6 +53,10 @@
                 {{=form.custom.widget.domicilio_numero}}
             </div>
           </div>
-      {{=form.custom.submit}}
+
+ <div class="form-group row">
+
+      <button type="submit" class="btn btn-default">siguiente</button>
+
 </div>
 {{=form.custom.end}}
