--- a/views/sueldos/familiar2.html
+++ b/views/sueldos/familiar2.html
@@ -47,6 +47,21 @@
                 {{=form.custom.widget.parentezco}}
             </div>
           </div>
- {{=form.custom.submit}}
-</div>
+
+<br>
+<br>
+
+
+
+ <div class=" col-sm-offset-1  col-sm-1">
+    
+      <a href="{{=URL(c="sueldos", f="familiar")}}" class="btn btn-default">Volver</a>
+    
+    </div>
+
+   <div class=" col-sm-offset-1  col-sm-1">
+      <center><button type="submit" class="btn btn-default">Guardar</button></center>
+   </div>
+
+
 {{=form.custom.end}}
