--- a/views/sueldos/legajos2.html
+++ b/views/sueldos/legajos2.html
@@ -17,7 +17,7 @@
          </div>
         
             <label for="campo_nombre" class="col-sm-2 control-label">Codigo Postal</label>
-            <div class="col-sm-1">
+            <div class="col-sm-2">
              
                           {{=form.custom.widget.codigo_postal}}
             </div>
@@ -34,7 +34,7 @@
                                 {{=form.custom.widget.email}}
 
             </div>
-            <label for="campo_feing" class="col-sm-1 control-label">Fecha Ingreso</label>
+            <label for="campo_feing" class="col-sm-2 control-label">Fecha Ingreso</label>
             <div class="col-sm-2">
                                 {{=form.custom.widget.fecha_ingreso}}
 
@@ -51,7 +51,7 @@
                                 {{=form.custom.widget.telefono_celular}}
 
             </div>
-            <label for="campo_est" class="col-sm-1 control-label" name = "estudia">Estudia</label>
+            <label for="campo_est" class="col-sm-2 control-label" name = "estudia">Estudia</label>
             <div class="col-sm-2">
                                       {{=form.custom.widget.estudia}}
 
@@ -60,12 +60,12 @@
 
 <div class="form-group row">
             <label for="campo_tel" class="col-sm-2 control-label">constancia de cuil</label>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                                 {{=form.custom.widget.cons_cuil}}
 
             </div>
                     <label for="campo_telcel" class="col-sm-2 control-label">fotocopia dni</label>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                                 {{=form.custom.widget.foto_dni}}
            
 </div>
@@ -76,36 +76,38 @@
 </div>
  <div class="form-group row">
             <label for="campo_lfam" class="col-sm-2 control-label" name = "libreta_de_familia">Libreta de Familia</label>
-            <div class="col-sm-3">
+            <div class="col-sm-2">
                                        {{=form.custom.widget.libreta}}
 
            
 </div>
- <div class="form-group row">
-            <label for="campo_pnach" class="col-sm-2 control-label" name = "partida_nac_hijos">Partida Nac. Hijos</label>
-            <div class="col-sm-1">
+            <label for="campo_pnach" class="col-sm-2 control-label" name = "partida_nac_hijos">Partida Nacimiento Hijos</label>
+            <div class="col-sm-2">
                        {{=form.custom.widget.partida}}
 
  
       
-            </div>         
+ </div>         
  </div>
 
 
 
-
-
+<br>
+<br>
+<br>
+<center>
 <div class="form-group row">
-    <div class=" col-sm-offset-1  col-sm-2">
+    <div class=" col-sm-offset-1  col-sm-5">
     
       <a href="{{=URL(c="sueldos", f="legajos")}}" class="btn btn-default">Volver</a>
     
     </div>
-     <div class="col-sm-2">
 
+   <div class=" col-sm-offset-1  col-sm-1">
       <button type="submit" class="btn btn-default">siguiente</button>
-     </div>
+   </div>
     
 </div>
+</center>
 
 {{=form.custom.end}}
