--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -4,61 +4,67 @@
 
 {{=form.custom.begin}}
 <div class="form-group row">
-            <label for="campo_fdnih" class="col-sm-4 control-label">Fotoc. DNI Hijos</label>
+            <label for="campo_fdnih" class="col-sm-3 control-label">Fotoc. DNI Hijos</label>
             <div class="col-sm-3">
                       {{=form.custom.widget.fotocopia_dni_hijos}} <!--estas variables hacen el input-->
             </div>
     </div>
 <div class="form-group row">
-            <label for="campo_fdnic" class="col-sm-4 control-label">Fotoc. DNI Cónyuge</label>
+            <label for="campo_fdnic" class="col-sm-3 control-label">Fotoc. DNI Cónyuge</label>
             <div class="col-sm-3">
                     {{=form.custom.widget.fotocopia_dni_conyuge}}
             </div>
 </div>
     <div class="form-group row">
-            <label for="campo_ccuilh" class="col-sm-4 control-label" name = "constancia_cuil_hijos" >Constancia CUIL Hijos</label>
+            <label for="campo_ccuilh" class="col-sm-3 control-label" name = "constancia_cuil_hijos" >Constancia CUIL Hijos</label>
             <div class="col-sm-3">
                     {{=form.custom.widget.constancia_cuil_hijos}}
             </div>
              
     </div>
     <div class="form-group row">
-            <label for="campo_ccuilh" class="col-sm-4 control-label" name = "constancia_cuil_cony">Constancia CUIL Cónyuge</label>
+            <label for="campo_ccuilh" class="col-sm-3 control-label" name = "constancia_cuil_cony">Constancia CUIL Cónyuge</label>
             <div class="col-sm-3">
                     {{=form.custom.widget.constancia_cuil_conyuge}}
             </div>
     </div>
 <div class="form-group row">
-            <label for="campo_caregh" class="col-sm-4 control-label" name = "constancia_alum_reg_hijo">Constancia Alumno Regular Hijo</label>
+            <label for="campo_caregh" class="col-sm-3 control-label" name = "constancia_alum_reg_hijo">Constancia Alumno Regular Hijo</label>
             <div class="col-sm-3">
                         {{=form.custom.widget.constancia_Alumno_Regular_Hijo}}
             </div>
 </div>           
 
     <div class="form-group row">
-            <label for="campo_careg" class="col-sm-4 control-label" name = "constancia_alum_reg_empl">Constancia Alumno Regular Empleado</label>
+            <label for="campo_careg" class="col-sm-3 control-label" name = "constancia_alum_reg_empl">Constancia Alumno Regular Empleado</label>
             <div class="col-sm-3">
                       {{=form.custom.widget.constancia_Alumno_Regular_empleado}}
             </div>
               
     </div>
 <div class="form-group row">
-            <label for="campo_cve" class="col-sm-4 control-label" name = "curriculum_empleado">Currículum Empleado</label>
+            <label for="campo_cve" class="col-sm-3 control-label" name = "curriculum_empleado">Currículum Empleado</label>
             <div class="col-sm-3">
                       {{=form.custom.widget.curriculum_empleado}}
             </div>
+</div>
     <div class="form-group row">
-            <label for="campo_nrolegajo" class="col-sm-2 control-label">imagen</label>
-            <div class="col-sm-4">
+            <label for="campo_nrolegajo" class="col-sm-3 control-label">imagen</label>
+            <div class="col-sm-3">
                 {{=form.custom.widget.image}}
             </div>
    
     </div> 
 <div class="form-group row">
-     <a href="{{=URL(c="sueldos", f="legajos2")}}" class="btn btn-default">Volver</a>
-  </div>
-            </div>
-              <center>    <button type="submit" class="btn btn-default">guardar</button>    </center>
-</div>
+    <div class=" col-sm-offset-1  col-sm-2">
+    
+      <a href="{{=URL(c="sueldos", f="legajos2")}}" class="btn btn-default">Volver</a>
+    
+    </div>
+
+   <div class=" col-sm-offset-1  col-sm-2">
+      <button type="submit" class="btn btn-default">guardar</button>
+   </div>
+    
 </div>
 {{=form.custom.end}}
