--- a/views/sueldos/reportes_horas.html
+++ b/views/sueldos/reportes_horas.html
@@ -3,11 +3,11 @@
 <table class="table">
     <caption>{{=titulo}}</caption>
     <thead>
-        <tr> <th>#</th> <th>Nro Legajo</th> <th>Apellido y Nombre</th> <th>Horas Trabajadas</th> </tr> 
+        <tr> <th>#</th> <th>Nro Legajo</th> <th>Apellido y Nombre</th> <th>Horas Trabajadas</th><th>Semana</th> </tr> 
     </thead>
         <tbody>
             {{for i, reg_empleado in enumerate(lista_horas):}}
-            <tr> <th scope="row">{{=i+1}}</th> <td>{{=reg_empleado.horas.num_legajo}}</td> <td>{{=reg_empleado.legajos.nombre}} {{=reg_empleado.legajos.apellido}}</td> <td>{{=reg_empleado.horas.hs_trab}}</td> </tr>
+            <tr> <th scope="row">{{=i+1}}</th> <td>{{=reg_empleado.horas.num_legajo}}</td> <td>{{=reg_empleado.legajos.nombre}}</td> {{=reg_empleado.legajos.apellido}}</td> <td>{{=reg_empleado.horas.hs_trab}}</td></td> {{=reg_empleado.horas.semana}}</tr>
         </tr>
            {{pass}}
        </tbody>
