--- a/views/sueldos/vista_previa_familiar.html
+++ b/views/sueldos/vista_previa_familiar.html
@@ -1,100 +1,144 @@
 {{extend 'layout.html'}}
-<h1>VISTA PREVIA FAMILIAR</h1>
+<center> <h1>VISTA PREVIA FAMILIAR</h1> </center>
 
 <div class="form-group row">
-            <label for="campo_nrolegajo" class="col-sm-1 control-label">Nro Legajo</label>
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Nro Legajo</label>
             <div class="col-sm-1">
                 {{=recordset.num_legajo}}
                
             </div>
-            <label for="campo_fechaegr" class="col-sm-1 control-label">apellido</label>
-            <div class="col-sm-1">
+    </div>
+<div class="form-group row">
+            <label for="campo_fechaegr" class="col-sm-2 control-label">apellido</label>
+            <div class="col-sm-2">
                 {{=recordset.apellido}}
                 
             </div>
-     <label for="campo_fechaegr" class="col-sm-1 control-label">Nombre</label>
-            <div class="col-sm-1">
+    </div>
+    <div class="form-group row">
+     <label for="campo_fechaegr" class="col-sm-2 control-label">Nombre</label>
+            <div class="col-sm-2">
                 {{=recordset.nombre}}
                 
-            </div>
-     <label for="campo_fechaegr" class="col-sm-1 control-label">cuil</label>
-            <div class="col-sm-1">
+        </div>  
+        </div>
+<div class="form-group row">
+    <label for="campo_fechaegr" class="col-sm-2 control-label">cuil</label>
+            <div class="col-sm-2">
                 {{=recordset.cuil}}
                 
-            </div>
-     <label for="campo_fechaegr" class="col-sm-1 control-label">Dni</label>
-            <div class="col-sm-1">
+        </div>  
+        </div>
+<div class="form-group row">
+ <label for="campo_fechaegr" class="col-sm-2 control-label">Dni</label>
+            <div class="col-sm-2">
                 {{=recordset.dni}}
-                
             </div>
 </div>
+
 <div class="form-group row">
-            <label for="campo_nrolegajo" class="col-sm-1 control-label">Lugar Nacimiento</label>
-            <div class="col-sm-1">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Lugar Nacimiento</label>
+            <div class="col-sm-2">
                {{=recordset.lu_nac}}
             </div>
-                <label for="campo_fechaegr" class="col-sm-1 control-label">Estado Civil</label>
-            <div class="col-sm-1">
+</div>
+
+
+<div class="form-group row">
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Estado Civil</label>
+            <div class="col-sm-2">
                 {{=recordset.est_civ}}
                 
             </div>
-                    <label for="campo_fechaegr" class="col-sm-1 control-label">Domicilio Numero</label>
-            <div class="col-sm-1">
-                {{=recordset.domicilio_numero}}
-                
-            </div>
-                   <label for="campo_fechaegr" class="col-sm-1 control-label"> Calle</label>
-            <div class="col-sm-1">
-                {{=recordset.domicilio_calle}}
-                
-            </div> 
-                    <label for="campo_fechaegr" class="col-sm-1 control-label">Piso</label>
-            <div class="col-sm-1">
-                {{=recordset.domicilio_piso}}
-                
-            </div>
-          </div>
+</div>
+
 <div class="form-group row">
-            <label for="campo_nrolegajo" class="col-sm-1 control-label">Depto</label>
-            <div class="col-sm-1">
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Domicilio Numero</label>
+            <div class="col-sm-2">
+                {{=recordset.domicilio_numero}}
+            </div>
+</div>
+
+
+<div class="form-group row">
+             <label for="campo_fechaegr" class="col-sm-2 control-label"> Calle</label>
+            <div class="col-sm-2">
+                {{=recordset.domicilio_calle}}
+            </div>
+</div>
+
+
+<div class="form-group row">
+     <label for="campo_fechaegr" class="col-sm-2 control-label">Piso</label>
+            <div class="col-sm-2">
+                {{=recordset.domicilio_piso}}
+            </div>
+</div>
+
+
+<div class="form-group row">
+     <label for="campo_fechaegr" class="col-sm-2 control-label">Piso</label>
+            <div class="col-sm-2">
+                {{=recordset.domicilio_piso}}
+            </div>
+</div>
+
+
+
+<div class="form-group row">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Depto</label>
+            <div class="col-sm-2">
                {{=recordset.domicilio_depto}}
             </div>
-            <label for="campo_fechaegr" class="col-sm-1 control-label">Codigo Postal</label>
-            <div class="col-sm-1">
+</div>
+<div class="form-group row">
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Codigo Postal</label>
+            <div class="col-sm-2">
                 {{=recordset.codigo_postal}}
             </div>
-                 <label for="campo_fechaegr" class="col-sm-1 control-label">Email</label>
-            <div class="col-sm-1">
+</div>
+<div class="form-group row">
+                 <label for="campo_fechaegr" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-2">
                 {{=recordset.email}}
             </div>
-                     <label for="campo_fechaegr" class="col-sm-1 control-label">Localidad</label>
-            <div class="col-sm-1">
+</div>
+<div class="form-group row">
+                     <label for="campo_fechaegr" class="col-sm-2 control-label">Localidad</label>
+            <div class="col-sm-2">
                 {{=recordset.localidad}}
             </div>
-                     <label for="campo_fechaegr" class="col-sm-1 control-label">Fecha Nacimiento</label>
-            <div class="col-sm-1">
+</div>
+<div class="form-group row">
+                     <label for="campo_fechaegr" class="col-sm-2 control-label">Fecha Nacimiento</label>
+            <div class="col-sm-2">
                 {{=recordset.fe_nac}}
             </div>
           </div>
 <div class="form-group row">
-            <label for="campo_nrolegajo" class="col-sm-1 control-label">Telefono</label>
-            <div class="col-sm-1">
+            <label for="campo_nrolegajo" class="col-sm-2 control-label">Telefono</label>
+            <div class="col-sm-2">
              {{=recordset.telefono}}
             </div>
-            <label for="campo_fechaegr" class="col-sm-1 control-label">Celular</label>
-            <div class="col-sm-1">
+</div>
+<div class="form-group row">
+            <label for="campo_fechaegr" class="col-sm-2 control-label">Celular</label>
+            <div class="col-sm-2">
                 {{=recordset.celular}}
             </div>
-                 <label for="campo_fechaegr" class="col-sm-1 control-label">Estudia</label>
-            <div class="col-sm-1">
+</div>
+<div class="form-group row">
+                 <label for="campo_fechaegr" class="col-sm-2 control-label">Estudia</label>
+            <div class="col-sm-2">
                 {{=recordset.estudia}}
             </div>
-                 <label for="campo_fechaegr" class="col-sm-1 control-label">Parentezco</label>
-            <div class="col-sm-1">
+</div>
+<div class="form-group row">
+                 <label for="campo_fechaegr" class="col-sm-2 control-label">Parentezco</label>
+            <div class="col-sm-2">
                 {{=recordset.parentezco}}
             </div>
-                  
-          </div>
+</div>
 
 
 
