modificaciones en reportes

--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -84,12 +84,11 @@
                 {{=form.custom.widget.depto}}
     </div>
 </div>
-<RIGHT>
-     <div class="col-sm-12">
+<br>
+    <div class=" col-sm-offset-11  col-sm-1">
 
           <button  type="submit" class="btn btn-default">siguiente </button> 
      </div>
-    
 </div>
-</RIGHT>
+</div>
 {{=form.custom.end}}
